@@ -8,11 +8,12 @@
 		<PROPERTY NAME="indentOpenBrackets" VALUE="{" />
 		<PROPERTY NAME="indentCloseBrackets" VALUE="}" />
 		<PROPERTY NAME="indentNextLines"
-			VALUE="^.*(then|else|case.*in)$" />
+			VALUE="^.*(then|do|else|case.*in)\s*(#.*)?$" />
 		<PROPERTY NAME="unindentThisLine"
-			VALUE="^\s*(fi|else|esac|.*\))$" />
+			VALUE="^\s*(fi|else|done|esac|[^(]*\).*)\s*(#.*)?$" />
 		<PROPERTY NAME="unindentNextLines"
-			VALUE="^\s*(fi|else|esac)$" />
+			VALUE="^\s*(fi|else|done|esac)\s*(#.*)?$" />
+		<PROPERTY NAME="electricKeys" VALUE=")" />
 	</PROPS>
 	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE" ESCAPE="\">
 		<!-- Comments -->
